--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
+    "imagekit": "^5.2.0",
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0"
   },
